--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -102,6 +102,21 @@ jobs:
     - name: Test SPM plugin
       working-directory: main
       run: make test-spm-plugin PROTOC=../protobuf/cmake_build/protoc
+    - name: Install stable cargo
+      uses: actions-rs/toolchain@v1
+      with:
+        profile: minimal
+        toolchain: stable
+    - name: B tests
+      working-directory: main
+      # The swift build needs to run to create the protoc executable else cargo build will fail
+      run: |
+        pwd
+        swift build -c release
+        cd BTests
+        cargo build
+        cd GenTests
+        swift test
 
   sanitizer_testing:
     runs-on: ubuntu-latest
