--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,9 +5,7 @@ name: Build and Test
 
 on:
   push:
-    branches:
-      - 'main'
-      - 'synccc'
+    branches: [ main ]
   pull_request:
     branches: [ main ]
 
