--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -8,6 +8,9 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+      - name: Set up Homebrew
+        id: set-up-homebrew
+        uses: Homebrew/actions/setup-homebrew@master
       - name: Checkout
         uses: actions/checkout@v4
         with:
